# cpp_chess

./: CMakeLists.txt  README.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  chess.cpp  move.cpp  move.h  utilities.h
test/: test_board.cpp  test_move.cpp
tests/: test_move.cpp
